--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,6 +11,12 @@
             "type": "dart"
         },
         {
+            "name": "Block_app",
+            "program": "lib/Pages/Block_app.dart",
+            "request": "launch",
+            "type": "dart"
+        },
+        {
             "name": "final_project (profile mode)",
             "request": "launch",
             "type": "dart",
