--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,10 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
-dependencies:
+dependencies: flutter pub add flutter_svg
+   material: any
+    google_fonts: ^4.0.5
+     
   flutter:
     sdk: flutter
 
@@ -35,8 +38,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  
 dev_dependencies:
+
   flutter_test:
     sdk: flutter
   http: ^0.13.5
@@ -53,6 +57,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+ 
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
